chore(swagger): update outdated swagger definiton
