# backend/docs/swagger.json
@@ -392,9 +392,9 @@
                 "summary": "SPI webhook handler",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/payment.BalanceResponse"
+                            "type": "string"
                         }
                     },
                     "500": {
